--- a/dot_config/neofetch/config.conf
+++ b/dot_config/neofetch/config.conf
@@ -744,7 +744,7 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/Users/aaron/.assets/lucy_neofetch_cropped.png"
+image_source="$HOME/.assets/lucy_neofetch_cropped.png"
 
 
 # Ascii Options
