--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -4,7 +4,7 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
-    exclude = [".p10k.zsh"]
+    exclude = [".p10k.zsh", ".oh-my-zsh/cache"]
 [".oh-my-zsh/custom/themes/powerlevel10k"]
     type = "archive"
     url = "https://github.com/romkatv/powerlevel10k/archive/master.tar.gz"
