--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -11,3 +11,9 @@
     exact = true
     refreshPeriod = "168h"
     stripComponents = 1
+[".oh-my-zsh/custom/plugins/zsh-autosuggestions"]
+    type = "git-repo"
+    url = "https://github.com/zsh-users/zsh-autosuggestions.git"
+    exact = true
+    refreshPeriod = "168h"
+    stripComponents = 1
