--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -4,7 +4,7 @@
     exact = true
     stripComponents = 1
     refreshPeriod = "168h"
-    exclude = [".p10k.zsh", ".oh-my-zsh/cache"]
+    exclude = [".p10k.zsh", ".oh-my-zsh/cache/*"]
 [".oh-my-zsh/custom/themes/powerlevel10k"]
     type = "archive"
     url = "https://github.com/romkatv/powerlevel10k/archive/master.tar.gz"
@@ -12,8 +12,8 @@
     refreshPeriod = "168h"
     stripComponents = 1
 [".oh-my-zsh/custom/plugins/zsh-autosuggestions"]
-    type = "git-repo"
-    url = "https://github.com/zsh-users/zsh-autosuggestions.git"
+    type = "archive"
+    url = "https://github.com/zsh-users/zsh-autosuggestions/archive/master.tar.gz"
     exact = true
     refreshPeriod = "168h"
     stripComponents = 1
