--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -17,3 +17,9 @@
     exact = true
     refreshPeriod = "168h"
     stripComponents = 1
+[".oh-my-zsh/custom/plugins/zsh-syntax-highlighting"]
+    type = "archive"
+    url = "https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz"
+    exact = true
+    refreshPeriod = "168h"
+    stripComponents = 1
