--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,2 +1,10 @@
 install.sh
 scripts/
+
+.oh-my-zsh/**
+!.oh-my-zsh/oh-my-zsh.sh
+!.oh-my-zsh/custom
+!.oh-my-zsh/plugins
+!.oh-my-zsh/templates
+!.oh-my-zsh/themes
+!.oh-my-zsh/tools
