--- a/dot_config/neofetch/config.conf
+++ b/dot_config/neofetch/config.conf
@@ -862,7 +862,7 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="800px"
 
 # Gap between image and text
 #
